# ocsigen-i18n

./: .gitignore  Makefile  README.MD  dune  i18n_generate.mll  i18n_ppx_checker.ml  i18n_ppx_common.ml  i18n_ppx_rewriter.ml  i18n_rewriter.ml  ocsigen-i18n.opam  opam
tests/: dune
tests/checker.t/: bad.ml  good.ml  run.t  tr.tsv
tests/generator.t/: run.t  tr.tsv
tests/rewrite.t/: input.ml  run.t
