opam-version: "2.0"
name:         "ocsigen-i18n"
version:      "4.0.0"
synopsis:     "I18n made easy for web sites written with eliom"
description:  "Provides executables: ocsigen-i18n-generator for generating an eliom file from a file containing tab-separated values; ocsigen-i18n-rewriter for implementing a PPX syntax for referencing entries in the generated eliom file"
maintainer:   "BeSport Team <dev@besport.com>"
license:      "LGPL-2.1-only with OCaml-LGPL-linking-exception"

homepage: "https://github.com/besport/ocsigen-i18n"
bug-reports: "https://github.com/besport/ocsigen-i18n/issues"
dev-repo: "git+https://github.com/besport/ocsigen-i18n.git"
build:   [ "dune" "build" "-p" name "-j" jobs ]

depends: [
  "ocaml" {>= "4.08"}
  "ocamlfind" {build}
  "ppxlib" {>= "0.21.0"}
]
authors: "Julien Sagot"
