opam-version: "2.0"
name:         "ocsigen-i18n"
version:      "4.0.0"
synopsis:     "Internationalisation of OCaml apps"
description:  "Provides executables: ocsigen-i18n for generating an OCaml file from a file containing tab-separated values; ocsigen-i18n-rewriter for implementing a PPX syntax for referencing entries in the generated OCaml file"
maintainer:   "BeSport Team <dev@besport.com>"
license:      "LGPL-2.1-only with OCaml-LGPL-linking-exception"

homepage: "https://github.com/besport/ocsigen-i18n"
bug-reports: "https://github.com/besport/ocsigen-i18n/issues"
dev-repo: "git+https://github.com/besport/ocsigen-i18n.git"
build:   [ "dune" "build" "-p" name "-j" jobs ]

depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "2.7"}
  "ppxlib" {>= "0.21.0"}
]
authors: "Julien Sagot"
x-maintenance-intent: ["(latest)" ]

